# langchain-rag

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: chat.py  documents.py  health.py
app/core/: config.py  dependencies.py
app/domain/: schemas.py
app/integrations/embeddings/: __init__.py  factory.py  hash.py  nexus.py
app/integrations/llms/: echo.py  factory.py  nexus.py
app/rag/chains/: rag_chain.py
app/rag/loaders/: file_loader.py
app/rag/prompts/: rag_prompt.py
app/rag/retrievers/: __init__.py  local_retriever.py
app/rag/vectorstores/: __init__.py  local_json_store.py
docs/: agent-roadmap.md  architecture.md  ubuntu-deploy.md
