[project]
name = "langchain-rag"
version = "0.1.0"
description = "Clean LangChain + RAG backend with an agent-ready boundary."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "requests>=2.32,<3.0",
  "langchain>=1.0,<2.0",
  "langchain-core>=1.0,<2.0",
  "langchain-community>=0.3,<1.0",
  "langchain-openai>=0.3,<1.0",
  "langchain-text-splitters>=0.3,<1.0",
  "pypdf>=5.0,<7.0",
  "docx2txt>=0.8,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.8,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
